# Riptide

./: .gitignore  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.txt  LICENSE  Package.resolved  Package.swift  QWEN.md  README.md  RELEASE-REPORT.md  RELEASE_NOTES.md  ROADMAP.md  TEST-FIX-SUMMARY.md  create-pr.sh  pr-body.md
Examples/: direct-mode.yaml
Resources/: Localizable.xcstrings  en.json  zh-Hans.json
RiptideHelper/: Entitlements.plist  Package.swift
Scripts/: build-release.sh  bump-version.sh  download-mihomo.sh  download-singbox.sh  generate-release-notes.sh  setup-signing.sh
docs/: COMPETITIVE-ROADMAP-2026.md  GA-TODO.md  HOMEBREW-INSTALL.md  IMPROVEMENT-PLAN.md  INSTALL.md  MIGRATION.md  RELEASE-CHECKLIST.md  TRANSLATION.md  WINDOWS-PORT-PLAN.md  improvement-plan-design-2026.md  mihomo-tun-plan.md  signing-setup.md
homebrew/: riptide.rb
riptide-windows/src-tauri/: Cargo.toml  tauri.conf.json
riptide-windows/src-tauri/capabilities/: default.json
riptide-windows/src-tauri/resources/templates/: direct-only.yaml  global-proxy.yaml  split-routing.yaml
riptide-windows/src-tauri/src/: lib.rs  main.rs
riptide-windows/src-tauri/src/cmds/: config.rs  mod.rs  proxy.rs  system.rs  windows.rs
riptide-windows/src-tauri/src/config/: mod.rs  parser.rs  profiles.rs  rules.rs  uri.rs
riptide-windows/src-tauri/src/core/: mihomo.rs  mihomo_api.rs  mod.rs  service.rs  sysproxy.rs  windows_proxy.rs  windows_sysproxy.rs  windows_tun.rs
riptide-windows/src-tauri/src/utils/: dirs.rs  hotkeys.rs  logger.rs  mod.rs  windows_dirs.rs
(+298 files in other folders)
