[package]
name = "riptide-windows"
version = "0.1.0"
description = "Riptide - A native Windows proxy client"
authors = ["Riptide Team"]
edition = "2021"

[lib]
name = "riptide_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
sysproxy = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
windows-service = "0.7"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
urlencoding = "2"
tokio-tungstenite = "0.26"
futures = "0.3"

tauri-plugin-fs = "2"

[profile.release]
strip = true
lto = true
opt-level = 3
